--- a/Api/.env
+++ b/Api/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/notitech
+MONGO_URI=mongodb+srv://open-numeric:<OpenNumeric45>@technoti.oj4ergo.mongodb.net/?retryWrites=true&w=majority&appName=technoti
 PORT=5000
